[package]
name = "gamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.17", features = ["ws"] }
once_cell = "1.16.0"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.16.0", features = ["full"] }
futures = "0.3"
serde_json = "1.0.73"
async-trait = "0.1.58"