[package]
name = "chatting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.17", features = ["ws"] }
gamer = { path = "../../gamer" }
tokio = { version = "1.14.0", features = ["full"] }